--- a/.env
+++ b/.env
@@ -26,14 +26,15 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=smtp
-MAIL_HOST=smtp.gmail.com
-MAIL_PORT=465
-MAIL_USERNAME=
-MAIL_PASSWORD=""
-MAIL_ENCRYPTION=tls
-MAIL_FROM_ADDRESS=
-MAIL_FROM_NAME="${APP_NAME}"
+
+MAIL_DRIVER=smtp
+MAIL_HOST=smtp.titan.email
+MAIL_PORT="587"
+MAIL_USERNAME="mail@communityhealth.me"
+MAIL_PASSWORD="Pakistan123@"
+MAIL_ENCRYPTION="tls"
+MAIL_FROM_ADDRESS="mail@communityhealth.me"
+MAIL_FROM_NAME="BanoLive"
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
